# exquisite

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  INSTALL  NEWS  README  configure.ac
data/themes/: default.edc
demo/: run-demo.sh
include/: main.h
src/: main.c
theme/: default.edc
